several refactorings, introduced CompositeStorage and StdOutStorage